--- a/pom.xml
+++ b/pom.xml
@@ -163,6 +163,22 @@
 				</executions>
 			</plugin>
 
+			<!-- ############################################### -->
+			<!-- /!\ Editing further should not be necessary /!\ -->
+			<!-- ############################################### -->
+
+			<!-- Disable maven deploy plugin: since generated artifacts will be deployed
+				in a P2 repository, there is no need to deploy them in an artifactory/nexus
+				repo. -->
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-deploy-plugin</artifactId>
+				<version>2.8.2</version>
+				<configuration>
+					<skip>true</skip>
+				</configuration>
+			</plugin>
+
 			<!-- This plugin is in charge of mirroring the different update sites
 				and put everything in place in ${project.build.directory}/gensite/ -->
 			<plugin>
@@ -236,4 +252,92 @@
 		</plugins>
 	</build>
 
+	<profiles>
+		<profile>
+			<!-- Make sure the upload only activates on Unix like platform. Windows
+				is not supported since rsync does not handle windows like paths (C:\....),
+				even when using Cygwin. Tested with MacOSX and Linux. Rsync must be installed
+				on system. -->
+			<activation>
+				<os>
+					<family>!windows</family>
+				</os>
+			</activation>
+			<build>
+				<plugins>
+					<!-- The following plugins print a message informing the user that it
+						will have to enter SourceForge credentials for uploading the new update site
+						using rsync. -->
+					<plugin>
+						<groupId>org.apache.maven.plugins</groupId>
+						<artifactId>maven-antrun-plugin</artifactId>
+						<version>1.8</version>
+						<executions>
+							<execution>
+								<id>print-hint-msg</id>
+								<phase>deploy</phase>
+								<goals>
+									<goal>run</goal>
+								</goals>
+								<configuration>
+									<target name="Print hint message">
+										<echo>############################################</echo>
+										<echo>### In the following prompts please</echo>
+										<echo>### enter your sourceforge</echo>
+										<echo>### credentials for the PREESM project.</echo>
+										<echo>### The generated content will be uploaded using rsync at</echo>
+										<echo>### login,preesm@web.sourceforge.net:/home/project-web/preesm/htdocs/gensite/</echo>
+										<echo>###  </echo>
+										<echo>### When prompted for login, please do not specify ",preesm".</echo>
+										<echo>###  </echo>
+										<echo>############################################</echo>
+									</target>
+								</configuration>
+							</execution>
+							<execution>
+								<id>read-SF-user-login</id>
+								<phase>deploy</phase>
+								<goals>
+									<goal>run</goal>
+								</goals>
+								<configuration>
+									<target name="Read SourceForge user login">
+										<input
+											message="Please enter your Sourceforge Login (without project name) : "
+											addproperty="user-login" />
+									</target>
+									<exportAntProperties>true</exportAntProperties>
+								</configuration>
+							</execution>
+						</executions>
+					</plugin>
+					<plugin>
+						<!-- This plugin calls the system RSync to upload the complete update
+							site on SF website. It will fail if the binary is not present in $PATH. Disabled
+							on windows hosts (see comment above). -->
+						<artifactId>exec-maven-plugin</artifactId>
+						<groupId>org.codehaus.mojo</groupId>
+						<version>1.6.0</version>
+						<executions>
+							<execution>
+								<id>sf-preesm-deploy</id>
+								<phase>deploy</phase>
+								<goals>
+									<goal>exec</goal>
+								</goals>
+								<configuration>
+									<executable>rsync</executable>
+									<arguments>
+										<argument>-auv</argument>
+										<argument>${project.build.directory}/gensite</argument>
+										<argument>${user-login},preesm@web.sourceforge.net:/home/project-web/preesm/htdocs/</argument>
+									</arguments>
+								</configuration>
+							</execution>
+						</executions>
+					</plugin>
+				</plugins>
+			</build>
+		</profile>
+	</profiles>
 </project>
