--- a/pom.xml
+++ b/pom.xml
@@ -15,361 +15,9 @@
 		<preesm.p2.repo>http://preesm.sourceforge.net/gensite/update-site/complete/</preesm.p2.repo>
 	</properties>
 
-	<pluginRepositories>
-		<pluginRepository>
-			<id>reficio</id>
-			<url>http://repo.reficio.org/maven/</url>
-		</pluginRepository>
-	</pluginRepositories>
-
-	<!-- Use this section to declare new maven repository (where the third party
-		libraries are) -->
-	<repositories>
-		<repository>
-			<id>Maven Central</id>
-			<url>http://central.maven.org/maven2/</url>
-		</repository>
-
-		<repository>
-			<id>clojars.org</id>
-			<url>http://clojars.org/repo</url>
-		</repository>
-
-		<repository>
-			<id>XypronRelease</id>
-			<url>https://www.xypron.de/repository</url>
-		</repository>
-
-		<repository>
-			<id>OpenNMS</id>
-			<url>http://repo.opennms.org/maven2/</url>
-		</repository>
-		
-		<repository>
-			<id>Boundless Repository</id>
-			<url>https://repo.boundlessgeo.com/main/</url>
-		</repository>
-		
-	</repositories>
-
-	<build>
-		<plugins>
-
-			<!-- This plugin is in charge install local jars as maven artifacts. -->
-			 <plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-install-plugin</artifactId>
-				<version>2.5.2</version>
-				<executions>
-					<execution>
-						<id>install-bsh218</id>
-						<phase>initialize</phase>
-						<goals>
-							<goal>install-file</goal>
-						</goals>
-						<configuration>
-							<file>${project.basedir}/lib/bsh-2.1.8.jar</file>
-							<groupId>org.beanshell</groupId>
-							<artifactId>bsh</artifactId>
-							<version>2.1.8</version>
-							<packaging>jar</packaging>
-						</configuration>
-					</execution>
-				</executions>
-			</plugin>
-			
-			<!-- This plugin is in charge of fetching the maven dependencies, converting
-				them to OSGi bundles, and generating the P2 repo (update site). Bound to
-				'package' phase -->
-			<plugin>
-				<groupId>org.reficio</groupId>
-				<artifactId>p2-maven-plugin</artifactId>
-				<version>1.2.0</version>
-				<executions>
-					<execution>
-						<id>default-cli</id>
-						<phase>compile</phase>
-						<goals>
-							<goal>site</goal>
-						</goals>
-
-						<configuration>
-							<compressSite>false</compressSite>
-							<!-- Specify a path, not an URL (see https://github.com/reficio/p2-maven-plugin/issues/107) -->
-							<categoryFileURL>${basedir}/category.xml</categoryFileURL>
-							<artifacts>
-
-								<!-- ########## -->
-								<!-- local jars -->
-								<!-- ########## -->
-								<artifact>
-									<id>org.beanshell:bsh:jar:2.1.8</id>
-									<source>true</source>
-								</artifact>
-								
-								<!-- ############# -->
-								<!-- Maven Central -->
-								<!-- ############# -->
-								<artifact>
-									<id>jgraph:jgraph:jar:5.13.0.0</id>
-									<source>true</source>
-								</artifact>
-
-								<artifact>
-									<id>net.sourceforge.jexcelapi:jxl:jar:2.6.10</id>
-									<source>true</source>
-								</artifact>
-
-								<artifact>
-									<id>com.github.yannrichet:JMathArray:jar:1.0</id>
-									<source>true</source>
-								</artifact>
-
-								<artifact>
-									<id>org.solovyev:jscl:jar:1.0.11</id>
-									<source>true</source>
-								</artifact>
-								
-								<artifact>
-									<id>jfree:jcommon:jar:1.0.16</id>
-									<source>true</source>
-								</artifact>
-								<artifact>
-									<id>jfree:jfreechart:jar:1.0.13</id>
-									<source>true</source>
-								</artifact>
-								<artifact>
-									<id>org.jacorb:jacorb-idl-compiler:jar:2.3.1</id>
-									<source>true</source>
-								</artifact>
-
-								<artifact>
-									<id>org.mockito:mockito-all:jar:1.10.19</id>
-									<source>true</source>
-								</artifact>
-								<artifact>
-									<id>org.apache.commons:commons-collections4:jar:4.1</id>
-									<source>true</source>
-								</artifact>
-								<artifact>
-									<id>org.apache.commons:commons-math3:jar:3.6.1</id>
-									<source>true</source>
-								</artifact>
-								<artifact>
-									<id>org.apache.commons:commons-io:jar:1.3.2</id>
-									<source>true</source>
-								</artifact>
-								<artifact>
-									<id>org.apache.commons:commons-lang3:jar:3.5</id>
-									<source>true</source>
-								</artifact>
-
-								<!-- ########### -->
-								<!-- clojars.org -->
-								<!-- ########### -->
-								<artifact>
-									<id>org.clojars.gilesc:jgrapht:jar:0.8.2</id>
-									<source>true</source>
-								</artifact>
-
-								<!-- ############# -->
-								<!-- XypronRelease -->
-								<!-- ############# -->
-								<artifact>
-									<id>org.gnu.glpk:glpk-java:1.0.32</id>
-									<source>true</source>
-								</artifact>
-								
-								<!-- ####### -->
-								<!-- OpenNMS -->
-								<!-- ####### -->
-								<artifact>
-									<id>jep:jep:jar:2.40</id>
-									<source>true</source>
-								</artifact>
-								
-							</artifacts>
-						</configuration>
-					</execution>
-				</executions>
-			</plugin>
-			
-			
-			<!-- ############################################### -->
-			<!-- /!\ Editing further should not be necessary /!\ -->
-			<!-- ############################################### -->
-
-			<!-- Disable maven deploy plugin: since generated artifacts will be deployed
-				in a P2 repository, there is no need to deploy them in an artifactory/nexus
-				repo. -->
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-deploy-plugin</artifactId>
-				<version>2.8.2</version>
-				<configuration>
-					<skip>true</skip>
-				</configuration>
-			</plugin>
-
-			<!-- This plugin is in charge of mirroring the different update sites
-				and put everything in place in ${project.build.directory}/gensite/ -->
-			<plugin>
-				<groupId>org.eclipse.tycho.extras</groupId>
-				<artifactId>tycho-p2-extras-plugin</artifactId>
-				<version>${tycho-version}</version>
-				<executions>
-					<execution>
-						<id>copy-current</id>
-						<phase>package</phase>
-						<goals>
-							<goal>mirror</goal>
-						</goals>
-						<configuration>
-							<source>
-								<repository>
-									<url>${project.baseUri}/target/repository</url>
-								</repository>
-							</source>
-							<append>false</append>
-							<compress>false</compress>
-							<includeOptional>true</includeOptional>
-							<destination>${project.build.directory}/gensite/update-site/${project.groupId}-${project.version}</destination>
-						</configuration>
-					</execution>
-					<execution>
-						<id>mirror-complete</id>
-						<phase>package</phase>
-						<goals>
-							<goal>mirror</goal>
-						</goals>
-						<configuration>
-							<source>
-								<!-- Note: if the URL points to a yet-to-exist update site, command
-									the following repo to prevent the P2 mirror task to fail -->
-								<repository>
-									<url>${preesm.p2.repo}</url>
-								</repository>
-								<repository>
-									<url>${project.baseUri}/target/repository</url>
-								</repository>
-							</source>
-							<append>true</append>
-							<compress>false</compress>
-							<includeOptional>true</includeOptional>
-							<destination>${project.build.directory}/gensite/update-site/complete/</destination>
-						</configuration>
-					</execution>
-				</executions>
-			</plugin>
-
-			<!-- This plugin allows to run a http server to locally host the generated
-				update site using 'mvn package jetty:run'. The update site is then available
-				under http://localhost:8080/site/ -->
-			<plugin>
-				<groupId>org.mortbay.jetty</groupId>
-				<artifactId>jetty-maven-plugin</artifactId>
-				<version>8.1.5.v20120716</version>
-				<configuration>
-					<scanIntervalSeconds>10</scanIntervalSeconds>
-					<webAppSourceDirectory>${basedir}/target/repository/</webAppSourceDirectory>
-					<webApp>
-						<contextPath>/site</contextPath>
-					</webApp>
-					<httpConnector>
-						<!--host>localhost</host -->
-						<port>8088</port>
-					</httpConnector>
-				</configuration>
-			</plugin>
-		</plugins>
-	</build>
-
-	<profiles>
-		<profile>
-			<!-- Make sure the upload only activates on Unix like platform. Windows
-				is not supported since rsync does not handle windows like paths (C:\....),
-				even when using Cygwin. Tested with MacOSX and Linux. Rsync must be installed
-				on system. -->
-			<activation>
-				<os>
-					<family>!windows</family>
-				</os>
-			</activation>
-			<build>
-				<plugins>
-					<!-- The following plugins print a message informing the user that it
-						will have to enter SourceForge credentials for uploading the new update site
-						using rsync. -->
-					<plugin>
-						<groupId>org.apache.maven.plugins</groupId>
-						<artifactId>maven-antrun-plugin</artifactId>
-						<version>1.8</version>
-						<executions>
-							<execution>
-								<id>print-hint-msg</id>
-								<phase>deploy</phase>
-								<goals>
-									<goal>run</goal>
-								</goals>
-								<configuration>
-									<target name="Print hint message">
-										<echo>############################################</echo>
-										<echo>### In the following prompts please</echo>
-										<echo>### enter your sourceforge</echo>
-										<echo>### credentials for the PREESM project.</echo>
-										<echo>### The generated content will be uploaded using rsync at</echo>
-										<echo>### login,preesm@web.sourceforge.net:/home/project-web/preesm/htdocs/gensite/</echo>
-										<echo>###  </echo>
-										<echo>### When prompted for login, please do not specify ",preesm".</echo>
-										<echo>###  </echo>
-										<echo>############################################</echo>
-									</target>
-								</configuration>
-							</execution>
-							<execution>
-								<id>read-SF-user-login</id>
-								<phase>deploy</phase>
-								<goals>
-									<goal>run</goal>
-								</goals>
-								<configuration>
-									<target name="Read SourceForge user login">
-										<input
-											message="Please enter your Sourceforge Login (without project name) : "
-											addproperty="user-login" />
-									</target>
-									<exportAntProperties>true</exportAntProperties>
-								</configuration>
-							</execution>
-						</executions>
-					</plugin>
-					<plugin>
-						<!-- This plugin calls the system RSync to upload the complete update
-							site on SF website. It will fail if the binary is not present in $PATH. Disabled
-							on windows hosts (see comment above). -->
-						<artifactId>exec-maven-plugin</artifactId>
-						<groupId>org.codehaus.mojo</groupId>
-						<version>1.6.0</version>
-						<executions>
-							<execution>
-								<id>sf-preesm-deploy</id>
-								<phase>deploy</phase>
-								<goals>
-									<goal>exec</goal>
-								</goals>
-								<configuration>
-									<executable>rsync</executable>
-									<arguments>
-										<argument>-auv</argument>
-										<argument>${project.build.directory}/gensite</argument>
-										<argument>${user-login},preesm@web.sourceforge.net:/home/project-web/preesm/htdocs/</argument>
-									</arguments>
-								</configuration>
-							</execution>
-						</executions>
-					</plugin>
-				</plugins>
-			</build>
-		</profile>
-	</profiles>
+	<modules>
+		<module>genfeature-maven-plugin</module>
+		<module>mirror_old_sites</module>
+		<module>dependency-site</module>
+	</modules>
 </project>
