--- a/genfeature-maven-plugin/pom.xml
+++ b/genfeature-maven-plugin/pom.xml
@@ -45,6 +45,11 @@
 			<artifactId>maven-invoker</artifactId>
 			<version>3.0.0</version>
 		</dependency>
+		<dependency>
+			<groupId>org.apache.maven</groupId>
+			<artifactId>maven-project</artifactId>
+			<version>2.0.6</version>
+		</dependency>
 	</dependencies>
 
 	<build>
