--- a/genfeature-maven-plugin/pom.xml
+++ b/genfeature-maven-plugin/pom.xml
@@ -59,7 +59,7 @@
 				<artifactId>maven-plugin-plugin</artifactId>
 				<version>3.2</version>
 				<configuration>
-					<goalPrefix>genfeature-maven-plugin</goalPrefix>
+					<goalPrefix>genfeature</goalPrefix>
 					<skipErrorNoDescriptorsFound>true</skipErrorNoDescriptorsFound>
 				</configuration>
 				<executions>
