--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,23 @@
 		<preesm.p2.repo>http://preesm.sourceforge.net/gensite/update-site/complete/</preesm.p2.repo>
 	</properties>
 
+	<build>
+		<plugins>
+			<!-- Disable maven deploy plugin: since generated artifacts will be deployed
+				in a P2 repository, there is no need to deploy them in an artifactory/nexus
+				repo. -->
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-deploy-plugin</artifactId>
+				<version>2.8.2</version>
+				<configuration>
+					<skip>true</skip>
+				</configuration>
+			</plugin>
+		</plugins>
+	</build>
+
+
 	<modules>
 		<!-- maven plugin required to build the final site -->
 		<module>genfeature-maven-plugin</module>
