--- a/mirror_old_sites/pom.xml
+++ b/mirror_old_sites/pom.xml
@@ -25,29 +25,37 @@
                     </goals>
                     <configuration>
                         <source> <!-- List -->
-							<repository><url>${updatesitesroot}/update-site/</url></repository>
+							
+							<!--
+							non official site:
 							<repository><url>${updatesitesroot}/laplacian-update-site/</url></repository>
-							<repository><url>${updatesitesroot}/0.1.0/</url></repository>
-							<repository><url>${updatesitesroot}/0.5.3/</url></repository>
+							should be already backed up:
+							<repository><url>${updatesitesroot}/update-site/</url></repository>
+							 -->
+							 
+							<repository><url>${updatesitesroot}/complete-0.1.0/</url></repository>
+							<repository><url>${updatesitesroot}/complete-0.5.3/</url></repository>
 
-							<repository><url>${updatesitesroot}/0.5.5/</url></repository>
-							<repository><url>${updatesitesroot}/0.5.6/</url></repository>
+							<repository><url>${updatesitesroot}/complete-0.5.5/</url></repository>
+							<repository><url>${updatesitesroot}/complete-0.5.6/</url></repository>
 
-							<repository><url>${updatesitesroot}/0.7.0.v20130512/</url></repository>
-							<repository><url>${updatesitesroot}/1.0.1.rc1-v20131030/updates/</url></repository>
-							<repository><url>${updatesitesroot}/update-site/backup/backup-2.1.3/</url></repository>
-							<repository><url>${updatesitesroot}/update-site/backup/backup-2.2.1/</url></repository>
-							<repository><url>${updatesitesroot}/update-site/backup/backup-2.2.2/</url></repository>
-							<repository><url>${updatesitesroot}/update-site/backup/backup-2.2.3/</url></repository>
-							<repository><url>${updatesitesroot}/update-site/backup/backup-2.2.4/</url></repository>
-							<repository><url>${updatesitesroot}/update-site/backup/backup-201402130920/</url></repository>
-							<repository><url>${updatesitesroot}/update-site/backup/backup-201403211752/</url></repository>
-							<repository><url>${updatesitesroot}/update-site/backup/backup-201409091710/</url></repository>
-							<repository><url>${updatesitesroot}/update-site/backup/backup-201410161538/</url></repository>
-							<repository><url>${updatesitesroot}/update-site/backup/backup-201411201049/</url></repository>
+							<repository><url>${updatesitesroot}/complete-0.7.0.v20130512/</url></repository>
+							<repository><url>${updatesitesroot}/complete-1.0.1.rc1-v20131030/updates/</url></repository>
+							<repository><url>${updatesitesroot}/complete-2.1.3/</url></repository>
+							<repository><url>${updatesitesroot}/complete-2.2.1/</url></repository>
+							<repository><url>${updatesitesroot}/complete-2.2.2/</url></repository>
+							<repository><url>${updatesitesroot}/complete-2.2.3/</url></repository>
+							<repository><url>${updatesitesroot}/complete-2.2.4/</url></repository>
+							<repository><url>${updatesitesroot}/complete-2.2.5/</url></repository>
+							<repository><url>${updatesitesroot}/complete-201402130920/</url></repository>
+							<repository><url>${updatesitesroot}/complete-201403211752/</url></repository>
+							<repository><url>${updatesitesroot}/complete-201409091710/</url></repository>
+							<repository><url>${updatesitesroot}/complete-201410161538/</url></repository>
+							<repository><url>${updatesitesroot}/complete-201411201049/</url></repository>
 
 							<!--
-							Failing
+							Failing (missing features/plugins ...)
+							
 							<repository><url>${updatesitesroot}/0.4.8/</url></repository>
 							<repository><url>${updatesitesroot}/0.5.0/</url></repository> empty ... 
 
